--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,5 @@
-
 user http;
 worker_processes  2;
-
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
 
 
 events {
@@ -17,17 +10,7 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
     keepalive_timeout  65;
 
     gzip  on;
@@ -41,20 +24,5 @@ http {
         image/svg+xml application/x-font-ttf font/opentype
         application/vnd.ms-fontobject;
 
-    server {
-        listen       80;
-        server_name  localhost;
-
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   /usr/share/nginx/html;
-        }
-    }
+    include /etc/nginx/sites-enabled/*.conf;
 }
