--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,22 @@
 user http;
 worker_processes  2;
 
-
 events {
     worker_connections  1024;
 }
 
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
+    sendfile      on;
+
+    server_tokens off;
+
+    client_max_body_size  4096k;
+    client_header_timeout 10;
+    client_body_timeout   10;
+    keepalive_timeout     10 10;
+    send_timeout          10;
 
     gzip  on;
     gzip_disable "msie6";
