--- a/nginx/sites-available/default.conf
+++ b/nginx/sites-available/default.conf
@@ -2,13 +2,13 @@ server {
 
     listen 80;
 
+    server_name localhost;
+
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    server_name localhost;
-
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
 
 }
