--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,5 +28,11 @@ http {
         image/svg+xml application/x-font-ttf font/opentype
         application/vnd.ms-fontobject;
 
+    ssl_session_cache shared:SSL:10m;
+    ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers ECDHE-RSA-AES256-SHA384:AES256-SHA256:RC4:HIGH:!MD5:!aNULL:!EDH:!AESGCM;
+    ssl_prefer_server_ciphers on;
+    ssl_ecdh_curve secp521r1;
+
     include /etc/nginx/sites-enabled/*.conf;
 }
