--- a/php/php.ini
+++ b/php/php.ini
@@ -871,7 +871,7 @@ extension=gettext.so
 ;extension=ldap.so
 ;extension=mcrypt.so
 ;extension=mssql.so
-;extension=mysqli.so
+extension=mysqli.so
 ;extension=mysql.so
 ;extension=odbc.so
 ;zend_extension=opcache.so
