memcached.service edit.

--- a/systemd/system/memcached.service.d/socket.conf
+++ b/systemd/system/memcached.service.d/socket.conf
@@ -1,3 +1,5 @@
+# Configure memcached.serice to use socket instead of localhost.
+
 [Service]
 ExecStart=
 ExecStart=/usr/bin/memcached -a 666 -s /tmp/memcached.sock
