--- a/systemd/system/memcached.service.d/socket.conf
+++ b/systemd/system/memcached.service.d/socket.conf
@@ -1,4 +1,4 @@
-# Configure memcached.serice to use socket instead of localhost.
+# Configure memcached.service to use socket instead of localhost.
 
 [Service]
 ExecStart=
